--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@auth/supabase-adapter": "^1.10.0",
+    "@aws-sdk/client-s3": "^3.862.0",
     "@prisma/client": "^6.13.0",
+    "@supabase/ssr": "^0.6.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "toastify-js": "^1.12.0",
+    "typescript-toastify": "^1.0.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
