--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@prisma/client": "^6.13.0",
     "@supabase/ssr": "^0.6.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
+    "ioredis": "^5.7.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "toastify-js": "^1.12.0",
     "typescript-toastify": "^1.0.4",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
