--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.862.0",
     "@prisma/client": "^6.13.0",
     "@supabase/ssr": "^0.6.1",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
