--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
+    "googleapis": "^166.0.0",
     "ioredis": "^5.8.2",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
